Added split endpoint -- some bugs exist
Likely due to math issues with calculating chunk length. Will fix soon.
